--- a/WebContent/mail.css
+++ b/WebContent/mail.css
@@ -1,4 +1,50 @@
-@CHARSET "UTF-8";
+@charset "utf-8";
+
+/* ========== 공통 ========== */
+html, body {
+	font-size: 16px;
+	font-family:"Times New Roman";
+	color: #393939;
+	background: #efefef;
+}
+body, div, p, h1, h3, h4, ul, figure {
+	margin: 0;
+	padding: 0;
+}
+p, td, th, li {
+	line-height: 1.8;
+}
+img {
+	width: 100%;
+	height: auto;
+}
+	
+a {
+	text-decoration: none;
+}
+/* ========== 내비게이션 ========== */
+nav {
+	background: #A4A4A4;
+}
+	.navbar {
+		display: none;
+		list-style-type: none;
+	}
+	.navbar p {
+		display: block;
+		padding: 1rem ;
+		color: #fff;
+		text-decoration: none;
+	}
+
+
+	.navbar {
+		display: flex;
+	}
+	.navbar li {
+		flex: auto;
+		text-align: center;
+	}
 
 table {
 	width: auto;
