--- a/WebContent/css/mail.css
+++ b/WebContent/css/mail.css
@@ -81,3 +81,26 @@ input[type="submit"],[type="reset"],[type="button"] {
 	height: 25px;
 	width:80px;
 }
+
+.progress{width:100%;margin:20px auto;text-align:center}
+
+.progress .circle,.progress .bar{position:relative;display:inline-block;background:#fff;width:40px;height:40px;border-radius:40px;border:1px solid #d5d5da}
+
+.progress .circle:not(:last-child){margin-right:80px;}
+
+.progress .bar{position:absolute;width:85px;height:6px;top:16px;left:40px;border-left:none;border-right:none;border-radius:0}
+
+.progress .circle .label{display:inline-block;width:32px;height:32px;line-height:32px;border-radius:32px;margin-top:4px;color:#b5b5ba;font-size:17px}
+
+.progress .circle .title{display:block;color:#b5b5ba;font-size:13px;line-height:30px;width:200px;margin-left:-80px;text-align:center}
+
+.progress .done .bar,.progress .circle.done{background:#eee}
+
+.progress .circle.done .label{color:#FFF;background:#8bc435}
+
+.progress .circle.done .title{color:#444}
+
+.progress .circle.active .label{color:#FFF;background:#0c95be}
+
+.progress .circle.active .title{color:#0c95be}
+
