--- a/WebContent/css/mail2.css
+++ b/WebContent/css/mail2.css
@@ -22,6 +22,17 @@ img {
 a {
 	text-decoration: none;
 }
+.container {
+	margin: 0 auto;
+	padding-left: 10px;
+	padding-right: 10px;
+	max-width: 1000px;
+}
+.img-responsive {
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
 /* ========== 내비게이션 ========== */
 nav {
 	background: #A4A4A4;
@@ -46,3 +57,45 @@ nav {
 		flex: auto;
 		text-align: center;
 	}
+
+header {
+	background: #fff;
+}
+
+	.header-lo {
+		list-style-type: none;
+		text-align: right;
+	}
+	.header-lo li {
+		display: inline;
+		padding: 0 1rem 0 0;
+
+	}
+	.header-lo a {
+		color: darkslategray;
+		text-decoration: none;
+	}
+
+	.header-container {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	.header-logo {
+		width: 200px;
+		height: 68px;
+		padding: 10px 0;
+	}
+	
+main h1 {
+	margin-bottom: 1rem;
+	border-bottom: 1px dashed #c94040;
+	font-weight: normal;
+	font-size: 1.6rem;
+}
+div {
+    display: block;
+}
+html {
+    color: -internal-root-color;
+}
